<resources>
    <string name="app_name">RopstamTask</string>
    <string name="rentickle">Rentickle</string>
    <string name="gurgoon">Gurgoon</string>
    <string name="search_hint">Search for Furniture, appliance etc.</string>
    <string name="our_cat">Our Categories</string>
    <string name="bed_room">Bed Room</string>
    <string name="living_room">Living Room</string>
    <string name="dslr_camera">DSLR Camera</string>
    <string name="applications">Applications</string>
    <string name="storage">Storage</string>
    <string name="packages">Packages</string>
    <string name="trending_products">Trending Products</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="back">Back</string>
    <string name="sofa_baleria">Sofa Baleria</string>
    <string name="_4_5">4.5</string>
    <string name="_1034_rating_104_reviews">1034 Rating | 104 Reviews</string>
    <string name="rent">Rent</string>
    <string name="_10_000_month">PKR 10,000/Month</string>
    <string name="refundable_deposit">Refundable Deposit</string>
    <string name="pkr_5000">PKR 5000</string>
    <string name="off">Get 10% off on this product by using coupon code RENT10</string>
    <string name="all_offer">View All Offers</string>
    <string name="select_size">Select Size</string>
    <string name="_6x2">6x2</string>
    <string name="_6x3">6x3</string>
    <string name="_6x4">6x4</string>
    <string name="_6x5">6x5</string>
    <string name="select_tenure">Select Tenure</string>
    <string name="enter_tenure">Please enter your tenure</string>
    <string name="for_36Month">PKR 50,000 for 36Months</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>