<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemDetailActivity">

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textColor="@color/black"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:drawableLeftCompat="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/img_frame"
        android:layout_width="0dp"
        android:layout_height="@dimen/_200sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:scaleType="fitXY"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintBottom_toTopOf="@+id/tv_sofaName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_back"/>

    <TextView
        android:id="@+id/tv_sofaName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sofa_baleria"
        android:textStyle="bold"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@+id/img_frame"
        app:layout_constraintStart_toStartOf="@+id/img_frame"
        app:layout_constraintTop_toBottomOf="@+id/img_frame"/>

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_5"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/white"
        android:background="#FFA500"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="@+id/tv_sofaName"
        app:layout_constraintTop_toBottomOf="@+id/tv_sofaName"
        app:drawableRightCompat="@drawable/ic_baseline_star_rate_24"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_1034_rating_104_reviews"
        android:layout_marginStart="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="@+id/tv_sofaName"
        app:layout_constraintStart_toEndOf="@+id/tv_rating"
        app:layout_constraintTop_toTopOf="@+id/tv_rating"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rating"/>

    <TextView
        android:id="@+id/tv_rent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rent"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating"
        app:layout_constraintStart_toStartOf="@+id/tv_rating"/>


    <TextView
        android:id="@+id/tv_priceRent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_000_month"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tv_sofaName"
        app:layout_constraintTop_toTopOf="@+id/tv_rent"/>

    <TextView
        android:id="@+id/tv_refundDeposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refundable_deposit"
        app:layout_constraintStart_toStartOf="@+id/tv_rent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rent"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pkr_5000"
        app:layout_constraintStart_toStartOf="@+id/tv_priceRent"
        app:layout_constraintTop_toTopOf="@+id/tv_refundDeposit"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_off"
        android:layout_width="0dp"
        android:layout_height="@dimen/_90sdp"
        app:cardBackgroundColor="#2FB9C4"
        app:cardCornerRadius="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/tv_selectSize"
        app:layout_constraintEnd_toEndOf="@+id/tv_priceRent"
        app:layout_constraintTop_toBottomOf="@+id/tv_refundDeposit"
        app:layout_constraintStart_toStartOf="@+id/tv_refundDeposit">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_gift"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:src="@drawable/gift"
                android:layout_marginEnd="@dimen/_15sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_off"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/img_gift"
                app:layout_constraintTop_toTopOf="@+id/img_gift"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_offer"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_off"
                app:layout_constraintTop_toBottomOf="@+id/tv_off"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_selectSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_size"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/et_tenure"
        app:layout_constraintStart_toStartOf="@+id/cv_off"
        app:layout_constraintTop_toBottomOf="@+id/cv_off"/>


    <TextView
        android:id="@+id/tv_sizeOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6x2"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/circle_layerlist"
        app:layout_constraintEnd_toStartOf="@+id/tv_sizeTwo"
        app:layout_constraintStart_toEndOf="@+id/tv_selectSize"
        app:layout_constraintTop_toTopOf="@+id/tv_selectSize"
        app:layout_constraintBottom_toBottomOf="@+id/tv_selectSize"/>

    <TextView
        android:id="@+id/tv_sizeTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6x3"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/circle_layerlist"
        app:layout_constraintEnd_toStartOf="@+id/tv_sizeThree"
        app:layout_constraintStart_toEndOf="@+id/tv_sizeOne"
        app:layout_constraintTop_toTopOf="@+id/tv_sizeOne"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sizeOne"/>

    <TextView
        android:id="@+id/tv_sizeThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6x4"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/circle_layerlist"
        app:layout_constraintEnd_toStartOf="@+id/tv_sizeFour"
        app:layout_constraintStart_toEndOf="@+id/tv_sizeTwo"
        app:layout_constraintTop_toTopOf="@+id/tv_sizeTwo"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sizeTwo"/>

    <TextView
        android:id="@+id/tv_sizeFour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6x5"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@drawable/circle_layerlist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_sizeThree"
        app:layout_constraintTop_toTopOf="@+id/tv_sizeThree"
        app:layout_constraintBottom_toBottomOf="@+id/tv_sizeThree"/>


    <TextView
        android:id="@+id/tv_selectTenure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_tenure"
        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@+id/et_tenure"
        app:layout_constraintBottom_toBottomOf="@+id/et_tenure"
        app:layout_constraintStart_toStartOf="@+id/tv_selectSize"/>

    <EditText
        android:id="@+id/et_tenure"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_7sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:hint="@string/enter_tenure"
        android:background="@drawable/storke_rect"
        android:paddingStart="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_3sdp"
        app:layout_constraintBottom_toTopOf="@+id/cv_bottomView"
        app:layout_constraintEnd_toEndOf="@+id/tv_sizeFour"
        app:layout_constraintStart_toEndOf="@+id/tv_selectTenure"
        app:layout_constraintTop_toBottomOf="@+id/tv_selectSize"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cv_bottomView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#2FB9C4"
        android:layout_marginTop="@dimen/_3sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_rentBottomView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rent"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/for_36Month"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_rentBottomView"
            app:layout_constraintTop_toBottomOf="@+id/tv_rentBottomView"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/add_to_cart"
            android:textSize="@dimen/_9sdp"
            android:background="@color/white"
            android:elevation="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>